# warrior-iptv-player

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_mac.sh
LICENSES/: THIRD_PARTY.md
docs/: build-exe.md  overview.md
packaging/: build.spec  mac.spec  rthook_mac_mpv.py
resources/: icon.icns  styles.qss
scripts/: create_icns.sh  fetch_mpv.py
src/: config.py  devlog.py  downloader.py  downloads_page.py  favorites.py  history.py  main.py  pages.py  paths.py  player.py  search.py  vlc_launcher.py  widgets.py  workers.py  xtream.py
tests/: conftest.py  test_downloader.py  test_paths.py  test_vlc_launcher.py
