[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warrior-iptv-player"
version = "0.1.0"
description = "Desktop IPTV player for Xtream-Codes accounts, built with PySide6 and libmpv."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Abdallah Samir" }]
keywords = ["iptv", "xtream", "mpv", "pyside6", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "PySide6==6.7.2",
    "requests==2.32.3",
    "python-mpv==1.0.7",
    "keyring==25.2.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.6",  # build desktop distributables
]

[project.urls]
Homepage = "https://github.com/<you>/warrior-iptv-player"
Issues   = "https://github.com/<you>/warrior-iptv-player/issues"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = [
    "main",
    "config",
    "devlog",
    "downloader",
    "downloads_page",
    "history",
    "pages",
    "paths",
    "player",
    "search",
    "vlc_launcher",
    "widgets",
    "workers",
    "xtream",
]
